--- a/extension/popup/popup.html
+++ b/extension/popup/popup.html
@@ -9,12 +9,17 @@
     <div id="nextVisit"></div>
     <div id="periodicityOptions"></div>
     <div id="footer"></div>
+    <p id="noteDisplay"></p>
   </div>
   <div id="typingView">
     <div class="column">
       <div id="typing"></div>
       <ul id="help"></ul>
     </div>
+  </div>
+  <div id="noteView">
+    <textarea name="note" id="note"></textarea>
+    <a id="saveNote" tabindex="0"></a>
   </div>
   <script src="popup.build.js"></script>
 </body>
