WIP: periodicity/note nav

--- a/extension/popup/popup.html
+++ b/extension/popup/popup.html
@@ -5,12 +5,16 @@
   <link rel="stylesheet" href="popup.build.css"/>
 </head>
 <body>
+  <nav>
+    <a id="showPeriodicityOptions"></a>
+    <a id="showNote"></a>
+  </nav>
   <div id="optionsView">
     <div id="nextVisit"></div>
     <div id="periodicityOptions"></div>
     <div id="footer"></div>
-    <p id="noteDisplay"></p>
   </div>
+  <p id="noteDisplay"></p>
   <div id="typingView">
     <div class="column">
       <div id="typing"></div>
